--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       z-index: 9999;
       animation: fall 8s linear forwards;
       will-change: transform, opacity;
-      /* Giới hạn chiều rộng màn hình mobile */
       max-width: 40px;
       min-width: 18px;
     }
@@ -36,7 +35,6 @@
   </style>
 </head>
 <body class="bg-pink-100 text-gray-800 font-sans overflow-x-hidden">
-  <!-- Login Page -->
   <div id="login-page" class="min-h-screen flex items-center justify-center">
     <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
       <h1 class="text-2xl sm:text-3xl font-bold text-pink-600 text-center mb-4">Đăng Nhập</h1>
@@ -48,7 +46,6 @@
     </div>
   </div>
 
-  <!-- Login Success Page -->
   <div id="success-page" class="hidden min-h-screen flex items-center justify-center">
     <div class="bg-white p-8 rounded-lg shadow-lg text-center">
       <h1 class="text-3xl font-bold text-pink-600 mb-4">Đăng nhập thành công!</h1>
@@ -56,7 +53,6 @@
     </div>
   </div>
 
-  <!-- Task Completion Success Page -->
   <div id="task-success-page" class="hidden min-h-screen flex items-center justify-center">
     <div class="bg-white p-8 rounded-lg shadow-lg text-center">
       <h1 id="task-success-title" class="text-3xl font-bold text-pink-600 mb-4">Chưa hoàn thành</h1>
@@ -64,7 +60,6 @@
     </div>
   </div>
 
-  <!-- Task Already Completed Page -->
   <div id="task-already-completed-page" class="hidden min-h-screen flex items-center justify-center">
     <div class="bg-white p-8 rounded-lg shadow-lg text-center">
       <h1 class="text-3xl font-bold text-pink-600 mb-4">Nhiệm vụ đã hoàn thành!</h1>
@@ -72,7 +67,6 @@
     </div>
   </div>
 
-  <!-- Task Pending Page -->
   <div id="task-pending-page" class="hidden min-h-screen flex items-center justify-center">
     <div class="bg-white p-8 rounded-lg shadow-lg text-center">
       <h1 class="text-3xl font-bold text-pink-600 mb-4">Nhiệm vụ đang chờ phê duyệt!</h1>
@@ -80,20 +74,16 @@
     </div>
   </div>
 
-  <!-- Main Page -->
   <div id="main-page" class="hidden min-h-screen flex flex-col items-center">
-    <!-- Header -->
     <div class="bg-pink-600 text-white w-full py-4 text-center">
       <h1 class="text-4xl font-bold">Chúng Mình</h1>
     </div>
 
-    <!-- Clock and Days Together -->
     <div class="my-8 text-center">
       <div id="clock" class="text-5xl font-bold text-pink-600"></div>
       <div id="days-together" class="text-2xl mt-4 text-gray-700"></div>
     </div>
 
-    <!-- Store -->
     <div class="w-full max-w-2xl p-4">
       <h2 class="text-3xl font-bold text-pink-600 mb-4">Cửa Hàng Tình Yêu</h2>
       <div id="store-main" class="grid grid-cols-1 gap-3 sm:grid-cols-2 sm:gap-4">
@@ -133,7 +123,6 @@
       </div>
     </div>
 
-    <!-- Tasks -->
     <div class="w-full max-w-2xl p-4">
       <h2 class="text-3xl font-bold text-pink-600 mb-4">Nhiệm Vụ Tình Yêu</h2>
       <div class="text-xl text-gray-700 mb-4">Tổng điểm của bé là: <span id="total-points">0</span>
@@ -184,7 +173,6 @@
     </div>
   </div>
 
-  <!-- Notification Popup -->
   <div id="notification-overlay" class="fixed inset-0 bg-black bg-opacity-30 z-50 flex items-center justify-center opacity-0 pointer-events-none transition-all duration-300">
     <div id="notification-popup" class="bg-white rounded-xl shadow-2xl px-8 py-6 text-center min-w-[220px] max-w-xs">
       <h2 id="notification-message" class="text-2xl font-bold mb-2 text-pink-600">Thông báo</h2>
@@ -193,7 +181,6 @@
   </div>
 
   <script>
-    // Load saved data from localStorage
     let tasks = JSON.parse(localStorage.getItem('tasks')) || {
       'Đăng Nhập': { points: 1, completed: false, pending: false },
       'Nói iu ank': { points: 1, completed: false, pending: false },
@@ -202,18 +189,15 @@
     };
     let totalPoints = parseInt(localStorage.getItem('totalPoints')) || 0;
 
-    // Update total points display on page load
     document.addEventListener('DOMContentLoaded', () => {
       document.getElementById('total-points').textContent = totalPoints;
     });
 
-    // Function to save data to localStorage
     function saveData() {
       localStorage.setItem('tasks', JSON.stringify(tasks));
       localStorage.setItem('totalPoints', totalPoints);
     }
 
-    // Login Input Handling
     const targetUsername = "anhyeuem";
     const targetPassword = "10/08/2024";
 
@@ -233,7 +217,6 @@
       }
     }
 
-    // Login Logic
     function login() {
       const username = document.getElementById('username').value;
       const password = document.getElementById('password').value;
@@ -243,15 +226,13 @@
         setTimeout(() => {
           document.getElementById('success-page').classList.add('hidden');
           document.getElementById('main-page').classList.remove('hidden');
-          // Auto-complete login task
           completeTask('Đăng Nhập', true);
-        }, 1000); // Chuyển hướng sau 2 giây
+        }, 1000);
       } else {
         alert('Vui lòng nhập đầy đủ thông tin đăng nhập!');
       }
     }
 
-    // Clock
     function updateClock() {
       const now = new Date();
       document.getElementById('clock').textContent = now.toLocaleTimeString('vi-VN');
@@ -259,7 +240,6 @@
     setInterval(updateClock, 1000);
     updateClock();
 
-    // Days Together
     function updateDaysTogether() {
       const startDate = new Date('2024-08-10');
       const now = new Date();
@@ -269,13 +249,11 @@
     }
     updateDaysTogether();
 
-    // Store Toggle
     function toggleStoreMore() {
       const storeMore = document.getElementById('store-more');
       storeMore.classList.toggle('hidden');
     }
 
-    // Hàm kiểm tra và reset nhiệm vụ nếu sang ngày mới
     function resetTasksIfNewDay() {
       const today = new Date().toISOString().slice(0, 10);
       const lastDate = localStorage.getItem('lastTaskDate');
@@ -288,12 +266,10 @@
         saveData();
       }
     }
-    // Gọi hàm reset khi load trang
     resetTasksIfNewDay();
 
-    // Task Management
+
     function completeTask(taskName, auto = false) {
-      // Kiểm tra lại ngày mỗi lần hoàn thành nhiệm vụ
       resetTasksIfNewDay();
       if (tasks[taskName].completed) {
         document.getElementById('main-page').classList.add('hidden');
@@ -345,11 +321,9 @@
       }
     }
 
-    // Thêm hàm cập nhật điểm thủ công
     function refreshPoints() {
       let newPoints = parseInt(localStorage.getItem('totalPoints')) || 0;
       document.getElementById('total-points').textContent = newPoints;
-      // Cập nhật trạng thái nút và thông báo nhiệm vụ
       let latestTasks = JSON.parse(localStorage.getItem('tasks')) || {};
       const taskButtons = document.querySelectorAll('#tasks > div');
       let i = 0;
@@ -383,7 +357,6 @@
       const heart = document.createElement('div');
       heart.className = 'heart';
       heart.innerHTML = '💗';
-      // Đảm bảo trái tim không rơi sát mép trên mobile
       const min = window.innerWidth * 0.05;
       const max = window.innerWidth * 0.95;
       heart.style.left = (min + Math.random() * (max - min)) + 'px';
@@ -396,10 +369,8 @@
       }, 8000);
     }
 
-    // Tạo nhiều trái tim rơi liên tục
     setInterval(createFallingHeart, 2500);
 
-    // Hàm hiện thông báo popup dạng nhiệm vụ
     function showNotification(message, type = 'success') {
       const overlay = document.getElementById('notification-overlay');
       const popup = document.getElementById('notification-popup');
@@ -424,7 +395,6 @@
       }, 1800);
     }
 
-    // Đổi điểm Đám cưới siu hoành tráng
     function redeemWedding() {
       let totalPoints = parseInt(localStorage.getItem('totalPoints')) || 0;
       const weddingCost = 999999999999999;
@@ -438,7 +408,6 @@
       }
     }
 
-    // Đổi điểm cho các phần thưởng khác
     function redeemStore(itemName, cost) {
       let totalPoints = parseInt(localStorage.getItem('totalPoints')) || 0;
       if (totalPoints >= cost) {
@@ -458,6 +427,22 @@
         showNotification('bé không đủ điểm òyy', 'error');
       }
     }
+
+    let musicStarted = false;
+    function startMusicOnFirstInteraction() {
+      if (!musicStarted) {
+        var music = document.getElementById('bg-music');
+        music.play();
+        musicStarted = true;
+      }
+    }
+    document.body.addEventListener('click', startMusicOnFirstInteraction, { once: true });
+    document.body.addEventListener('touchstart', startMusicOnFirstInteraction, { once: true });
+
+    var music = document.getElementById('bg-music');
   </script>
+
+<audio id="bg-music" src="nhaciumh.mp3" loop preload="auto" style="display:none;"></audio>
+
 </body>
 </html>
