--- a/admin.html
+++ b/admin.html
@@ -18,6 +18,10 @@
     <div id="admin-panel" class="hidden bg-white p-8 rounded-lg shadow-lg mt-4">
       <h2 class="text-3xl font-bold text-pink-600 mb-4 text-center">Phê Duyệt Nhiệm Vụ</h2>
       <div class="text-xl text-gray-700 mb-4">Tổng điểm của bạn: <span id="total-points">0</span></div>
+      <div class="mt-2 flex items-center gap-2">
+        <input id="custom-point" type="number" class="border rounded px-2 py-1 w-24" placeholder="Sửa điểm">
+        <button onclick="setCustomPoints()" class="bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-600">Lưu điểm</button>
+      </div>
       <div id="pending-tasks" class="space-y-4"></div>
       <button onclick="logoutAdmin()" class="mt-4 bg-red-600 text-white p-2 rounded hover:bg-red-700 w-full">Thoát</button>
     </div>
@@ -91,6 +95,18 @@
       document.getElementById('admin-login').classList.remove('hidden');
       document.getElementById('admin-password').value = '';
       document.getElementById('admin-login-error').classList.add('hidden');
+    }
+
+    function setCustomPoints() {
+      const val = parseInt(document.getElementById('custom-point').value);
+      if (!isNaN(val)) {
+        localStorage.setItem('totalPoints', val);
+        totalPoints = val;
+        updateTotalPoints();
+        alert('Đã cập nhật điểm!');
+      } else {
+        alert('Vui lòng nhập số hợp lệ!');
+      }
     }
   </script>
 </body>
