--- a/admin.html
+++ b/admin.html
@@ -80,7 +80,7 @@
 
     function accessAdmin() {
       const password = document.getElementById('admin-password').value;
-      if (password === 'admin123') {
+      if (password === 'lqciumhnhieulam...') {
         document.getElementById('admin-login').classList.add('hidden');
         document.getElementById('admin-panel').classList.remove('hidden');
         updateTotalPoints();
