--- a/index.html
+++ b/index.html
@@ -6,33 +6,7 @@
   <title>iumhcute</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <style>
-    .heart {
-      position: fixed;
-      top: -30px;
-      font-size: 18px;
-      color: #e11d48;
-      pointer-events: none;
-      z-index: 9999;
-      animation: fall 8s linear forwards;
-      will-change: transform, opacity;
-      max-width: 40px;
-      min-width: 18px;
-    }
-    @media (max-width: 640px) {
-      .heart {
-        font-size: 14px !important;
-        max-width: 28px;
-        min-width: 14px;
-      }
-    }
-    @keyframes fall {
-      to {
-        transform: translateY(100vh) rotate(360deg);
-        opacity: 0.7;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-pink-100 text-gray-800 font-sans overflow-x-hidden">
   <div id="login-page" class="min-h-screen flex items-center justify-center">
@@ -180,269 +154,13 @@
     </div>
   </div>
 
-  <script>
-    let tasks = JSON.parse(localStorage.getItem('tasks')) || {
-      'Đăng Nhập': { points: 1, completed: false, pending: false },
-      'Nói iu ank': { points: 1, completed: false, pending: false },
-      'Không bỏ bữa': { points: 1, completed: false, pending: false },
-      'Ngoan - Xink - Iu': { points: 1, completed: false, pending: false }
-    };
-    let totalPoints = parseInt(localStorage.getItem('totalPoints')) || 0;
+  <button id="play-music-btn" class="fixed bottom-4 right-4 z-50 bg-pink-600 text-white p-3 rounded-full shadow-lg">
+    <i id="music-on" class="fas fa-music"></i>
+    <i id="music-off" class="fas fa-volume-mute hidden"></i>
+  </button>
 
-    document.addEventListener('DOMContentLoaded', () => {
-      document.getElementById('total-points').textContent = totalPoints;
-    });
+  <audio id="bg-music" src="nhaciumh.mp3" loop preload="auto" style="display:none;"></audio>
 
-    function saveData() {
-      localStorage.setItem('tasks', JSON.stringify(tasks));
-      localStorage.setItem('totalPoints', totalPoints);
-    }
-
-    const targetUsername = "anhyeuem";
-    const targetPassword = "10/08/2024";
-
-    function updateUsername() {
-      const input = document.getElementById('username');
-      const inputLength = input.value.length;
-      if (inputLength > 0) {
-        input.value = targetUsername.slice(0, inputLength);
-      }
-    }
-
-    function updatePassword() {
-      const input = document.getElementById('password');
-      const inputLength = input.value.length;
-      if (inputLength > 0) {
-        input.value = targetPassword.slice(0, inputLength);
-      }
-    }
-
-    function login() {
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
-      if (username === "anhyeuem" && password === "10/08/2024") {
-        document.getElementById('login-page').classList.add('hidden');
-        document.getElementById('success-page').classList.remove('hidden');
-        setTimeout(() => {
-          document.getElementById('success-page').classList.add('hidden');
-          document.getElementById('main-page').classList.remove('hidden');
-          completeTask('Đăng Nhập', true);
-        }, 1000);
-      } else {
-        alert('Vui lòng nhập đầy đủ thông tin đăng nhập!');
-      }
-    }
-
-    function updateClock() {
-      const now = new Date();
-      document.getElementById('clock').textContent = now.toLocaleTimeString('vi-VN');
-    }
-    setInterval(updateClock, 1000);
-    updateClock();
-
-    function updateDaysTogether() {
-      const startDate = new Date('2024-08-10');
-      const now = new Date();
-      const diffTime = Math.abs(now - startDate);
-      const diffDays = Math.floor(diffTime / (1000 * 60 * 60 * 24));
-      document.getElementById('days-together').innerHTML = `Đã bên nhau được <span class='font-bold text-pink-600'>${diffDays}</span> ngày`;
-    }
-    updateDaysTogether();
-
-    function toggleStoreMore() {
-      const storeMore = document.getElementById('store-more');
-      storeMore.classList.toggle('hidden');
-    }
-
-    function resetTasksIfNewDay() {
-      const today = new Date().toISOString().slice(0, 10);
-      const lastDate = localStorage.getItem('lastTaskDate');
-      if (lastDate !== today) {
-        for (const key in tasks) {
-          tasks[key].completed = false;
-          tasks[key].pending = false;
-        }
-        localStorage.setItem('lastTaskDate', today);
-        saveData();
-      }
-    }
-    resetTasksIfNewDay();
-
-
-    function completeTask(taskName, auto = false) {
-      resetTasksIfNewDay();
-      if (tasks[taskName].completed) {
-        document.getElementById('main-page').classList.add('hidden');
-        document.getElementById('task-success-title').textContent = 'Đã hoàn thành!';
-        document.getElementById('task-success-desc').textContent = '';
-        document.getElementById('task-success-page').classList.remove('hidden');
-        setTimeout(() => {
-          document.getElementById('task-success-page').classList.add('hidden');
-          document.getElementById('main-page').classList.remove('hidden');
-        }, 2000);
-        return;
-      }
-      if (tasks[taskName].pending) {
-        document.getElementById('main-page').classList.add('hidden');
-        document.getElementById('task-success-title').textContent = 'Chưa hoàn thành';
-        document.getElementById('task-success-desc').textContent = 'Đang gửi yêu cầu phê duyệt...';
-        document.getElementById('task-success-page').classList.remove('hidden');
-        setTimeout(() => {
-          document.getElementById('task-success-page').classList.add('hidden');
-          document.getElementById('main-page').classList.remove('hidden');
-        }, 2000);
-        return;
-      }
-      tasks[taskName].pending = true;
-      saveData();
-      if (auto) {
-        tasks[taskName].pending = false;
-        tasks[taskName].completed = true;
-        totalPoints += tasks[taskName].points;
-        document.getElementById('total-points').textContent = totalPoints;
-        saveData();
-        document.getElementById('main-page').classList.add('hidden');
-        document.getElementById('task-success-title').textContent = 'Đã hoàn thành!';
-        document.getElementById('task-success-desc').textContent = '';
-        document.getElementById('task-success-page').classList.remove('hidden');
-        setTimeout(() => {
-          document.getElementById('task-success-page').classList.add('hidden');
-          document.getElementById('main-page').classList.remove('hidden');
-        }, 2000);
-      } else {
-        document.getElementById('main-page').classList.add('hidden');
-        document.getElementById('task-success-title').textContent = 'Chưa hoàn thành';
-        document.getElementById('task-success-desc').textContent = 'Đang gửi yêu cầu phê duyệt...';
-        document.getElementById('task-success-page').classList.remove('hidden');
-        setTimeout(() => {
-          document.getElementById('task-success-page').classList.add('hidden');
-          document.getElementById('main-page').classList.remove('hidden');
-        }, 2000);
-      }
-    }
-
-    function refreshPoints() {
-      let newPoints = parseInt(localStorage.getItem('totalPoints')) || 0;
-      document.getElementById('total-points').textContent = newPoints;
-      let latestTasks = JSON.parse(localStorage.getItem('tasks')) || {};
-      const taskButtons = document.querySelectorAll('#tasks > div');
-      let i = 0;
-      for (const taskName in latestTasks) {
-        const task = latestTasks[taskName];
-        const taskDiv = taskButtons[i];
-        if (taskDiv) {
-          const btn = taskDiv.querySelector('button');
-          if (task.completed) {
-            btn.textContent = 'Đã hoàn thành';
-            btn.disabled = true;
-            btn.classList.add('bg-gray-400', 'cursor-not-allowed');
-            btn.classList.remove('bg-pink-600', 'hover:bg-pink-700');
-          } else if (task.pending) {
-            btn.textContent = 'Chờ phê duyệt';
-            btn.disabled = true;
-            btn.classList.add('bg-yellow-400', 'cursor-wait');
-            btn.classList.remove('bg-pink-600', 'hover:bg-pink-700');
-          } else {
-            btn.textContent = 'Hoàn thành';
-            btn.disabled = false;
-            btn.classList.remove('bg-gray-400', 'cursor-not-allowed', 'bg-yellow-400', 'cursor-wait');
-            btn.classList.add('bg-pink-600', 'hover:bg-pink-700');
-          }
-        }
-        i++;
-      }
-    }
-
-    function createFallingHeart() {
-      const heart = document.createElement('div');
-      heart.className = 'heart';
-      heart.innerHTML = '💗';
-      const min = window.innerWidth * 0.05;
-      const max = window.innerWidth * 0.95;
-      heart.style.left = (min + Math.random() * (max - min)) + 'px';
-      heart.style.fontSize = (14 + Math.random() * 10) + 'px';
-      heart.style.opacity = 0.8 + Math.random() * 0.2;
-      document.body.appendChild(heart);
-
-      setTimeout(() => {
-        heart.remove();
-      }, 8000);
-    }
-
-    setInterval(createFallingHeart, 2500);
-
-    function showNotification(message, type = 'success') {
-      const overlay = document.getElementById('notification-overlay');
-      const popup = document.getElementById('notification-popup');
-      const msg = document.getElementById('notification-message');
-      const desc = document.getElementById('notification-desc');
-      if (type === 'success') {
-        msg.textContent = 'Thành công';
-        msg.classList.remove('text-red-500');
-        msg.classList.add('text-pink-600');
-        desc.textContent = message;
-      } else {
-        msg.textContent = 'Thất bại';
-        msg.classList.remove('text-pink-600');
-        msg.classList.add('text-red-500');
-        desc.textContent = message;
-      }
-      overlay.classList.remove('opacity-0', 'pointer-events-none');
-      overlay.classList.add('opacity-100');
-      setTimeout(() => {
-        overlay.classList.remove('opacity-100');
-        overlay.classList.add('opacity-0', 'pointer-events-none');
-      }, 1800);
-    }
-
-    function redeemWedding() {
-      let totalPoints = parseInt(localStorage.getItem('totalPoints')) || 0;
-      const weddingCost = 999999999999999;
-      if (totalPoints >= weddingCost) {
-        showNotification('Chờ Anh Nha, Vợ Yêu', 'success');
-        totalPoints -= weddingCost;
-        localStorage.setItem('totalPoints', totalPoints);
-        document.getElementById('total-points').textContent = totalPoints;
-      } else {
-        showNotification('bé không đủ điểm òyy', 'error');
-      }
-    }
-
-    function redeemStore(itemName, cost) {
-      let totalPoints = parseInt(localStorage.getItem('totalPoints')) || 0;
-      if (totalPoints >= cost) {
-        let successMsg = 'Đã đổi thành công: ' + itemName + '!';
-        if (itemName.startsWith('Voice đặc biệt')) {
-          successMsg = 'check mess ngay thoiiii';
-        } else if (itemName === 'Ôm an ủi') {
-          successMsg = 'ôm cục cưng mụt cái nà';
-        } else if (itemName === 'Nụ Hôn tình iu') {
-          successMsg = 'chụtttt';
-        }
-        showNotification(successMsg, 'success');
-        totalPoints -= cost;
-        localStorage.setItem('totalPoints', totalPoints);
-        document.getElementById('total-points').textContent = totalPoints;
-      } else {
-        showNotification('bé không đủ điểm òyy', 'error');
-      }
-    }
-
-    let musicStarted = false;
-    function startMusicOnFirstInteraction() {
-      if (!musicStarted) {
-        var music = document.getElementById('bg-music');
-        music.play();
-        musicStarted = true;
-      }
-    }
-    document.body.addEventListener('click', startMusicOnFirstInteraction, { once: true });
-    document.body.addEventListener('touchstart', startMusicOnFirstInteraction, { once: true });
-
-    var music = document.getElementById('bg-music');
-  </script>
-
-<audio id="bg-music" src="nhaciumh.mp3" loop preload="auto" style="display:none;"></audio>
-
+  <script src="script.js"></script>
 </body>
 </html>
