--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@
 
   <audio id="bg-music" src="nhaciumh.mp3" loop preload="auto" style="display:none;"></audio>
 
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js"></script>
+  <script src="script.js"></script>
+
   <script src="script.js"></script>
 </body>
 </html>
