--- a/admin.html
+++ b/admin.html
@@ -184,7 +184,7 @@
                 <p class="text-sm text-gray-600">${tasks[taskName].points} điểm</p>
               </div>
             </div>
-            <button onclick="approveTask('${taskName.replace(/'/g, "\\'")}')" 
+            <button onclick="approveTask(&quot;${taskName.replace(/"/g, '&quot;')}&quot;)"
                     class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 flex items-center gap-2">
               <i class="fas fa-check"></i>
               Phê duyệt
