--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
       <h1 class="text-2xl font-bold text-pink-600 mb-6 text-center">Đăng Nhập</h1>
       <input id="username" type="text" placeholder="Tên đăng nhập" class="w-full p-2 mb-4 border rounded focus:outline-none focus:ring-2 focus:ring-pink-600" oninput="updateUsername()">
-      <input id="password" type="password" placeholder="Mật khẩu" class="w-full p-2 mb-4 border rounded focus:outline-none focus:ring-2 focus:ring-pink-600" oninput="updatePassword()">
+      <input id="password" type="text" placeholder="Mật khẩu" class="w-full p-2 mb-4 border rounded focus:outline-none focus:ring-2 focus:ring-pink-600" oninput="updatePassword()">
       <button onclick="login()" class="w-full bg-pink-600 text-white py-2 rounded hover:bg-pink-700 transition-all">Đăng Nhập</button>
     </div>
   </div>
